# CareerCompass_AI

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  main.py  mock_helper.py
backend/app/agents/: analyzer.py  counselor.py  graph.py  roadmap.py  verifier.py
backend/app/db/: connection.py  repositories.py
backend/app/middleware/: rate_limiter.py
backend/app/models/: schemas.py
frontend/: angular.json  package-lock.json  vercel.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/ad-banner/: ad-banner.component.css  ad-banner.component.html  ad-banner.component.ts
frontend/src/app/components/challenge-card/: challenge-card.component.css  challenge-card.component.html  challenge-card.component.ts
frontend/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/components/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/components/navbar/: navbar.component.css  navbar.component.html
frontend/src/app/models/: interfaces.ts
frontend/src/app/services/: api.service.ts  chat.service.ts  seo.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
