[project]
name = "careercompass-ai-backend"
version = "0.1.0"
description = "Multi-agent career guidance and skill verification platform"
requires-python = ">=3.11,<3.14"

dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "motor>=3.6.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
